Works locally as setting port to 5000 to avoid clash with IIS on port 80

--- a/Tailspin.SpaceGame.Web/appsettings.json
+++ b/Tailspin.SpaceGame.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "LeaderboardFunctionUrl": "http://leaderboard/api/Leaderboard"
+    "LeaderboardFunctionUrl": "http://localhost:5005/api/Leaderboard"
   }
 }
