try to work from Azure containers

--- a/Tailspin.SpaceGame.Web/appsettings.Development.json
+++ b/Tailspin.SpaceGame.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "LeaderboardFunctionUrl": "http://docker.for.win.localhost:5005/api/Leaderboard"
   }
 }
