--- a/Tailspin.SpaceGame.Web/appsettings.json
+++ b/Tailspin.SpaceGame.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "LeaderboardFunctionUrl": "http://localhost:5005/api/Leaderboard"
+    "LeaderboardFunctionUrl": "http://leaderboard:5005/api/Leaderboard"
   }
 }
